2005-09-30  Vivek Jain <jvivek@novell.com>
	
	* shared-folder-common.c: (org_gnome_create_option)
	 			: (org_gnome_shared_folder_factory)
	* install-shared.c 	: (org_gnome_popup_wizard)
	enable shared-folder functionalilty, remove env check 

2005-09-28  Sankar P  <psankar@novell.com>

	*  proxy.c (proxy_dialog_store_widgets_data):
	Added code to handle the extra blank email that will be returned 
	from the ENameSelector, while auto-completion.
	Fixes #317400
	
2005-09-27  Vivek Jain <jvivek@novell.com>
	
	* install-shared.c: (accept_clicked): 
	 we have to connect "response" to (install_folder_response)
	 to make it work
	 don't destroy druid right now, wait till folder selector
	 dialog dies, make folder selector dialog modal

2005-08-25  Sankar P  <psankar@novell.com>

	*  proxy.c: (proxy_dialog_finalize):
	Replaced g_object_unref with g_free since priv was created using g_new.
	Fixes #312309

2005-08-23  Not Zed  <NotZed@Ximian.com>

	* proxy-login.c (proxy_get_password): return the right type.
	(proxy_soap_login): fix pointer cast.
	(proxy_login_add_new_store): fix pointer cast.
	(proxy_login_setup_tree_view): fix callback cast.
	(org_gnome_proxy_account_login): fix prototype to match use.

	* junk-settings.c (user_selected): fix calling.
	(junk_settings_construct): more stupid casts.

	* junk-mail-settings.c (junk_mail_settings): casts.

	* install-shared.c (install_folder_response): constify item_id.
	(install_folder_response): remove unused.
	(org_gnome_popup_wizard): fixed numerous problems with this,
	over-copying data around, not referencing information properly,
	freeing potentially unset variables, etc etc.
	(accept_free): add a free function.

	* share-folder.c (notification_clicked): fix a multitude of busted
	casts.
	(user_selected): fix broken calling conventions, busted style.
	(share_folder_construct): fix more busted/missing casts.

	* share-folder-common.c: add missing header.

2005-08-22  vivek jain <jvivek@novell.com>
	